--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <div dir="rtl">
-  <p>  ما الان همه با كمك رايانه و اينترنت به هم متصل هستيم مثل سلول هاى عصى درون مغزى غول بيكر.</p>
+  <p>ما الان همه با كمك رايانه و اينترنت به هم متصل هستيم مثل سلول هاى عصبى درون مغزى غول پيكر.</p>
+  
+  <p>"استیون هاوکینگ"</p>
 
-<p> "استیون هاوکینگ" </p>
+  <p>اميررضا سورى هستم.</p>
+  
+  <p>مهمترين دليل انتخاب گرايش درسى نرم افزاركامپيوتر براى من در دل جمله ى نقل شده از  هاوكينگ نهفته است آنجا كه دورنماى دنياى جديد را به ما نشان ميدهد. دنيایى كه بدون ابزارهاى ارتباطى قابل تصور نيست. ابزارهایى كه شايد فكر كردن به آنها در قرن پيش امكان پذير نبود  تا جایى كه در زندگی سكنه ى قرن حاضر جاى خود را پيدا كرده اند  كه تصور زندگی بدون تكنولوژى و در راس آن رايانه ها و اينترنت امكان پذير نيست . جزیي ازاين پازل تكامل بودن احساس بسيار خوبى به من ميدهد اينكه در دنياى پيش رو الفباى مكالمه راكه بر رايانه ها و برنامه هاى مربوط پايه نهاده شده را بدانم.</p>
+  
+  <p>بعد از اتمام دوران فوق ليسانس ميخواهم بيشتر تمرين كنم و تلفيقى از آموخته هاى آكادميك و تجربه هاى عملى را تمرين كنم. دوس دارم در  انتهاى اين قسمت از زندگی درسى خود  بيشتر روى گرايش تحصيلى ام مانور بدهم و حيطه كارى خود را مرتبط با نرم افزار انتخاب كنم در ادامه اگر  شرايط  قابل كنترل باشد به ادامه تحصيل در مقطع بالاتر علاقه مند هستم . </p>
 
-<p>اميررضا سورى هستم.</p>
-
-مهمترين دليل انتخاب گرايش درسى نرم افزا ركامييوتر براى من در دل جمله ى نقل شده از  هاوكينگ نهفته است آنجا كه دورنماى دنياى جديد را به ما نشان ميدهد. دنيایى كه بدون<p> ابزارهاى ارتباطى قابل تصور نيست. ابزارهایى كه شايد فكر كردن به آنها در قرن پيش امكان پذير نبود  تا جایى كه در زندگی سكنه ى قرن حاضر جاى خود را ييدا كرده اند  كه تصور زندگی بدون تكنولوژى و در راس آن رايانه ها و اينترنت امكان يذير نيست . جزیي ازاين پازل تكامل بودن احساس بسيار خوبى به من ميدهد اينكه در دنياى پيش رو الفباى مكالمه راكه بر رايانه ها و برنامه هاى مربوط پايه نهاده شده را بدانم.</p>
-بعد از اتمام دوران فوق ليسانس ميخواهم بيشتر تمرين كنم و تلفيقى از آموخته هاى آكادميك و تجربه هاى عملى را تمرين كنم. دوس دارم در  انتهاى اين قسمت از زندگی درسى خود<p>  بيشتر روى گرايش تحصيلى ام مانور بدهم و حيطه كارى خود را مرتبط با نرم افزار انتخاب كنم در ادامه اگر  شرايط  قابل كنترل باشد به ادامه تحصيل در مقطع بالاتر علاقه مند هستم . 
-متاسفانه قبلا تجربه كار مرتبط با گرايش تحصيلى خود را نداشته ام برايم دنيابى جديد و پر از جذابيت است . به اميد روزى كه سهم تمام بشريت رسيدن  به آرزوهايشان باشد.  در پايان تشكر  ميكنم از استاد گرانقدر آقاى دكتر رضوى كه فراتر ازدرس تخصصى مربوطه به ما انسانى بهتر بودن را مى آموزد.</p>
-
+  <p>متاسفانه قبلا تجربه كار مرتبط با گرايش تحصيلى خود را نداشته ام برايم دنيابى جديد و پر از جذابيت است . به اميد روزى كه سهم تمام بشريت رسيدن  به آرزوهايشان باشد.  در پايان تشكر  ميكنم از استاد گرانقدر آقاى دكتر رضوى كه فراتر ازدرس تخصصى مربوطه به ما انسانى بهتر بودن را مى آموزد.</p> 
   
 </div>
